force-app/main/default/objects/Exl_POE_Document_Junction__mdt/Exl_POE_Document_Junction__mdt.object-meta.xml
<CustomObject>
    <label>POE Document Junction</label>
    <pluralLabel>POE Documents Junction</pluralLabel>
</CustomObject>