force-app/main/default/objects/Exl_POE_Document_Junction__mdt/fields/CaseTypePicklistConfig__c.field-meta.xml
<CustomField>
    <fullName>CaseTypePicklistConfig__c</fullName>
    <label>CaseTypePicklistConfig</label>
    <referenceTo>Exl_CaseTypePicklistConfig__mdt</referenceTo>
    <relationshipLabel>POE Documents Junction</relationshipLabel>
    <relationshipName>POE_Documents_Junction</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>