force-app/main/default/objects/Exl_POE_Document_Junction__mdt/fields/Exclusion_Document_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Exclusion_Document_Mapping__c</fullName>
    <label>Exclusion Document Mapping</label>
    <referenceTo>Exl_ExclusionDocumentMapping__mdt</referenceTo>
    <relationshipLabel>POE Documents Junction</relationshipLabel>
    <relationshipName>POE_Documents_Junction</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>