force-app/main/default/objects/Exl_POE_Document_Junction__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>CaseTypePicklistConfig__c</columns>
    <columns>Exclusion_Document_Mapping__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>